--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,13 @@
     <application
         android:name=".Domicilios"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreenActivity"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/SplashScreenAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden" />
@@ -46,8 +48,17 @@
 
         <activity
             android:name=".RestauranteActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_restaurante"
-            android:theme="@style/AppTheme"></activity>
-    </application>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".OrdenActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/OrdenAppTheme" />
 
+        <activity
+            android:name=".ConfirmarPedidoActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/OrdenAppTheme" />
+    </application>
 </manifest>
